minor changes in colour

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -93,16 +93,16 @@
 			text-decoration: none;
 			outline: none;
 			color: #fff;
-			background-color: #4CAF50;
+			background-color: #7cd1f9;
 			border: none;
 			border-radius: 15px;
 			box-shadow: 0 9px #999;
 		}
 
-		.generate-password:hover {background-color: #3e8e41}
+		.generate-password:hover {background-color: #3dafe5}
 
 		.generate-password:active {
-			background-color: #3e8e41;
+			background-color: #3dafe5;
 			box-shadow: 0 5px #666;
 		}
 
