--- a/views/partials/breacher.hbs
+++ b/views/partials/breacher.hbs
@@ -2,5 +2,5 @@
 	<h1 class="breach-title">Has Your Password Been Breached?</h1>
 	<p class="page-info">Enter a password in the text box below to see how many times the password has been breached.</p>
 	<input type="text" id="userInput" name="input" placeholder="Enter Password">
-	<button onclick="" class="submit" id="submitbutton">Submit</button>
+	<button onclick="passwords_breach_lookup()" class="submit" id="submitbutton">Submit</button>
 </div>
