Connected breachjs to frontend

--- a/views/breach.hbs
+++ b/views/breach.hbs
@@ -21,8 +21,12 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 
+function popup() {
+	var d = document.getElementById("output");
+	swal(d);
+}
+
 </script>
-<script src="../breach.js"></script>
 
 </body>
 </html>
