--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -152,6 +152,13 @@
 			box-shadow: 0 5px #666;
 		}
 
+		.output {
+		position: absolute;
+		top: 60%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		}
+
 	</style>
 
 </head>
