--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -114,10 +114,10 @@
 			transform: translate(-50%, -50%);
 		}
 
-		input[type=text], select {
+		.userInput {
 			position: absolute;
 			top: 50%;
-			left: 30%;
+			left: 50%;
 			width: 30%;
 			padding: 12px 20px;
 			margin: 8px 0;
@@ -125,12 +125,13 @@
 			border: 1px solid #ccc;
 			border-radius: 4px;
 			box-sizing: border-box;
+			transform: translate(-50%, -50%);
 		}
 
-		.submit {
+		.breach-submit {
 			position: absolute;
-			top: 50%;
-			left: 61%;
+			top: 60%;
+			left: 50%;
 			display: inline-block;
 			padding: 12px 20px;
 			font-size: 24px;
@@ -143,20 +144,105 @@
 			border: none;
 			border-radius: 15px;
 			box-shadow: 0 9px #999;
+			transform: translate(-50%, -50%);
 		}
 
-		.submit:hover {background-color: #3dafe5}
+		.breach-submit:hover {background-color: #3dafe5}
 
-		.submit:active {
+		.breach-submit:active {
 			background-color: #3dafe5;
 			box-shadow: 0 5px #666;
 		}
 
 		.output {
-		position: absolute;
-		top: 60%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+			position: absolute;
+			top: 65%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+
+		.manager-title {
+			font-size: 50px;
+			position: absolute;
+			top: 20%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+
+		.manager-info {
+			font-size: 36px;
+			position: absolute;
+			top: 30%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+
+		.username {
+			position: absolute;
+			top: 40%;
+			left: 50%;
+			width: 30%;
+			padding: 12px 20px;
+			margin: 8px 0;
+			display: inline-block;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+			transform: translate(-50%, -50%);
+		}
+
+		.password {
+			position: absolute;
+			top: 45%;
+			left: 50%;
+			width: 30%;
+			padding: 12px 20px;
+			margin: 8px 0;
+			display: inline-block;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+			transform: translate(-50%, -50%);
+		}
+
+		.url {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 30%;
+			padding: 12px 20px;
+			margin: 8px 0;
+			display: inline-block;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+			transform: translate(-50%, -50%);
+		}
+
+		.mgr-submit {
+			position: absolute;
+			top: 60%;
+			left: 50%;
+			display: inline-block;
+			padding: 12px 20px;
+			font-size: 24px;
+			cursor: pointer;
+			text-align: center;
+			text-decoration: none;
+			outline: none;
+			color: #fff;
+			background-color: #7cd1f9;
+			border: none;
+			border-radius: 15px;
+			box-shadow: 0 9px #999;
+			transform: translate(-50%, -50%);
+		}
+
+		.mgr-submit:hover {background-color: #3dafe5}
+
+		.mgr-submit:active {
+			background-color: #3dafe5;
+			box-shadow: 0 5px #666;
 		}
 
 	</style>
