--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-	<!--{{> header}}-->
+
 
 <body style="background-color: #FFA07A;">
 
 <!-- control panel -->
-	{{> control}}
+
 
 <!--sign-up Page-->
 <div id="sign-up-div" >
     <h1 class="sign-up-title">sign-up</h1>
-    <form id="sign-up-form" method="POST" action="/sign-up-entry">
+    <form id="sign-up-form" method="POST" action="/newUser">
         Email: <br>
-        <input type="text" id="userInputEmail" name="email" placeholder="Enter an email"> <br>
+        <input type="email" id="userInputEmail" name="email" placeholder="Enter an email"> <br>
         Password: <br>
         <input type="text" id="userInputPassword" name="password" placeholder="Enter a password"> <br>
         <input type="submit" value="Submit" class="submit">
