--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,8 @@
 <head>
 	<title>{{title}}</title>
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<style>
 
 		body {
@@ -246,5 +248,8 @@
 		}
 
 	</style>
-
+    <body>
+    <button type="button" onclick="/login" class="btn btn-primary">Sign-in</button>
+    <button type="button" onclick="/sign-out" class="btn btn-primary">Sign-out</button>
+    </body>
 </head>
