--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -249,7 +249,7 @@
 
 	</style>
     <body>
-    <button type="button" onclick="/login" class="btn btn-primary">Sign-in</button>
-    <button type="button" onclick="/sign-out" class="btn btn-primary">Sign-out</button>
+    <a role="button" href="/login" class="btn btn-primary">Sign-in</a>
+    <a role="button" href="/sign-out" class="btn btn-primary">Sign-out</a>
     </body>
 </head>
