--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,6 +19,7 @@
         <input type="submit" value="Submit" class="submit">
     </form>
     <p class="err" id="err">{{error}}</p>
+    <a style="" role="button" href="/sign-out" class="btn btn-danger">Sign-out</a>
 </div>
 
 <!-- Open and Close Side Menu -->
