--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,11 +15,11 @@
         Email: <br>
         <input type="text" id="userInputEmail" name="email" placeholder="Enter an email"> <br>
         Password: <br>
-        <input type="text" id="userInputPassword" name="password" placeholder="Enter a password"> <br>
+        <input type="password" id="userInputPassword" name="password" placeholder="Enter a password"> <br>
         <input type="submit" value="Submit" class="submit">
     </form>
     <p class="err" id="err">{{error}}</p>
-    <a style="" role="button" href="/sign-out" class="btn btn-danger">Sign-out</a>
+    <a style="" role="button" href="/forgot-password" class="btn btn-danger">Forgot Password</a>
 </div>
 
 <!-- Open and Close Side Menu -->
