--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,11 +12,9 @@
 <div id="login-div" >
     <h1 class="Login-title">Login</h1>
     <form id="login-form" method="POST" action="/login-entry">
-        Email: <br>
-        <input type="text" id="userInputEmail" name="email" placeholder="Enter an email"> <br>
-        Password: <br>
-        <input type="text" id="userInputPassword" name="password" placeholder="Enter a password"> <br>
-        <input type="submit" value="Submit" class="submit">
+        <input type="text" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email"> <br>
+        <input type="text" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password"> <br>
+        <input type="submit" value="Submit" class="loginsubmit">
     </form>
     <p class="err" id="err">{{error}}</p>
 </div>
