--- a/views/partials/login-form.hbs
+++ b/views/partials/login-form.hbs
@@ -3,9 +3,9 @@
 	<!--<p class="page-info">Enter a password in the text box below to see how many times the password has been breached.</p>-->
 
 	<form id="login-form" method="POST" action="/login">
-        <input type="text" id="userInputEmail" name="email" placeholder="Enter an email">
-		<input type="text" id="userInputPassword" name="password" placeholder="Enter a password">
-		<input type="submit" value="Submit" class="submit">
+        <input type="text" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email">
+		<input type="text" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password">
+		<input type="submit" value="Submit" class="loginsubmit">
 	</form>
 	<p class="err" id="err">{{error}}</p>
 </div>
