Manage Password Functionality
1. Add password
2. Find a password
3. Find all passwords associated to the e-mail address
4. Delete a password by the website
5. Delete all passwords associated to the e-mail address

--- a/views/partials/control.hbs
+++ b/views/partials/control.hbs
@@ -4,7 +4,12 @@
 	  <a href="/">Home</a>
 	  <a href="/generate">Generate Passwords</a>
 	  <a href="/manage">Manage Passwords</a>
-	  <a href="/breach">Breach Logs</a>
+	  <!--<a href="/breach">Breach Logs</a>-->
+      <a href="/find">Find Password</a>
+      <a href="/findall">Find All Passwords</a>
+      <a href="/delete">Delete a Password</a>
+      <a href="/deleteall">Delete All Passwords</a>
+      <a href="/breach">Breach Logs</a>
 	</div>
 </div>
 
