--- a/views/index.html
+++ b/views/index.html
@@ -164,9 +164,13 @@
 	<div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	  <a href="/">Home</a>
-		<a href="/login">Login</a>
 	  <a href="/generate">Generate Passwords</a>
 	  <a href="/manage">Manage Passwords</a>
+	  <!--<a href="/breach">Breach Logs</a>-->
+	  <a href="/find">Find Password</a>
+	  <a href="/findall">Find All Passwords</a>
+	  <a href="/delete">Delete a Password</a>
+	  <a href="/deleteall">Delete All Passwords</a>
 	  <a href="/breach">Breach Logs</a>
 	</div>
 </div>
