--- a/views/login.hbs
+++ b/views/login.hbs
@@ -19,7 +19,8 @@
 
     </form>
     <p class="err" id="err">{{error}}</p>
-    <a style="" role="button" href="/forgot-password" class="btn btn-danger">Forgot Password</a>
+    <!--Not implemented -->
+    <!--<a style="" role="button" href="/forgot-password" class="btn btn-danger">Forgot Password</a>-->
 </div>
 
 <!-- Open and Close Side Menu -->
