--- a/views/partials/control.hbs
+++ b/views/partials/control.hbs
@@ -3,12 +3,16 @@
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	  <a href="/">Home</a>
 	  <a href="/generate">Generate Passwords</a>
-	  <a href="/manage">Manage Passwords</a>
-	  <!--<a href="/breach">Breach Logs</a>-->
-      <a href="/find">Find Password</a>
-      <a href="/findall">Find All Passwords</a>
-      <a href="/delete">Delete a Password</a>
-      <a href="/deleteall">Delete All Passwords</a>
+	  <div class="dropdown">
+	  	<button class="dropbtn">Manage Passwords</button>
+	  	<div class="dropdown-content">
+		  <a href="/find">Find Password</a>
+	      <a href="/findall">Find All Passwords</a>
+	      <a href="/delete">Delete a Password</a>
+	      <a href="/deleteall">Delete All Passwords</a>
+	    </div>
+	  </div>
+      
       <a href="/breach">Breach Logs</a>
 	</div>
 </div>
