--- a/views/partials/deleteall.hbs
+++ b/views/partials/deleteall.hbs
@@ -3,7 +3,7 @@
     <!--<p class="manager-info">Store your username, password, and URL</p>-->
 
     <form id="mgr-form" method="DELETE" action="/delEmail">
-        <input type="email" name="emailaddress" id="username" class="username" placeholder="Enter Email" required><br>
+        <input type="email" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
         <button type="submit" class="mgr-submit">Submit</button>
     </form>
