--- a/views/partials/find.hbs
+++ b/views/partials/find.hbs
@@ -4,7 +4,7 @@
 
     <form id="mgr-form" method="GET" action="/getWebsite">
         <!--<input type="email" name="emailaddress" id="username" class="username" placeholder="Enter Email" required><br>-->
-        <input type="text" name="website" id="username" class="username" placeholder="Enter Website" required><br>
+        <input type="text" name="website" id="username" class="website" placeholder="Enter Website" required><br>
         <!--<input type="password" name="password" id="password" class="password" placeholder="Enter Password" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
         <button type="submit" class="mgr-submit">Submit</button>
