--- a/views/partials/delete.hbs
+++ b/views/partials/delete.hbs
@@ -3,7 +3,7 @@
     <!--<p class="manager-info">Store your username, password, and URL</p>-->
 
     <form id="mgr-form" method="DELETE" action="/delWebsite">
-        <input type="text" name="website" id="username" class="username" placeholder="Enter Website" required><br>
+        <input type="text" name="website" id="username" class="website" placeholder="Enter Website" required><br>
         <!--<input type="text" name="password" id="username" class="username" placeholder="Enter Website" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
         <button type="submit" class="mgr-submit">Submit</button>
