--- a/views/partials/login-form.hbs
+++ b/views/partials/login-form.hbs
@@ -4,7 +4,7 @@
 
 	<form id="login-form" method="POST" action="/login">
         <input type="text" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email">
-		<input type="text" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password">
+		<input type="password" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password">
 		<input type="submit" value="Submit" class="loginsubmit">
 	</form>
 	<p class="err" id="err">{{error}}</p>
