--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,7 +14,7 @@
     <form id="login-form" method="POST" action="/login-entry">
 
         <input type="text" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email"> <br>
-        <input type="text" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password"> <br>
+        <input type="password" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password"> <br>
         <input type="submit" value="Submit" class="loginsubmit">
 
     </form>
