--- a/views/partials/control.hbs
+++ b/views/partials/control.hbs
@@ -17,4 +17,7 @@
 	</div>
 </div>
 
+<a style="float: right" role="button" href="/sign-out" class="btn btn-primary">Sign-out</a>
+<a style="float: right" role="button" href="/login" class="btn btn-primary">Sign-in</a>
+
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
