--- a/views/index.html
+++ b/views/index.html
@@ -164,6 +164,7 @@
 	<div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	  <a href="/">Home</a>
+	  <a href="/sign-up">Create a new account</a>
 	  <a href="/generate">Generate Passwords</a>
 	  <a href="/manage">Manage Passwords</a>
 	  <!--<a href="/breach">Breach Logs</a>-->
