--- a/views/partials/findall.hbs
+++ b/views/partials/findall.hbs
@@ -3,7 +3,7 @@
     <!--<p class="manager-info">Store your username, password, and URL</p>-->
 
     <form id="mgr-form" method="GET" action="/getEmail">
-        <input type="email" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>
+        <!--<input type="email" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>-->
         <!--<input type="password" name="password" id="password" class="password" placeholder="Enter Password" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
         <button type="submit" class="mgr-submit">Submit</button>
