--- a/views/partials/control.hbs
+++ b/views/partials/control.hbs
@@ -1,11 +1,13 @@
 <div id="control">
 	<div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	  <a href="/newUser">Sign Up</a>
 	  <a href="/">Home</a>
 	  <a href="/generate">Generate Passwords</a>
 	  <div class="dropdown">
 	  	<button class="dropbtn">Manage Passwords</button>
 	  	<div class="dropdown-content">
+	  	  <a href="/manage">Add Website</a>
 		  <a href="/find">Find Password</a>
 	      <a href="/findall">Find All Passwords</a>
 	      <a href="/delete">Delete a Password</a>
