--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -338,6 +338,20 @@
 			transform: translate(-50%, -50%);
 		}
 
+		.emailtext {
+			position: absolute;
+			top: 35%;
+			left: 36.3%;
+			transform: translate(-50%, -50%);
+		}
+
+		.passwordtext {
+			position: absolute;
+			top: 46%;
+			left: 37%;
+			transform: translate(-50%, -50%);
+		}
+
 	</style>
 
 </head>
