--- a/views/partials/mgr.hbs
+++ b/views/partials/mgr.hbs
@@ -3,9 +3,8 @@
 	<!--<p class="manager-info">Store your username, password, and URL</p>-->
 
 	<form id="mgr-form" method="POST" action="/addAccount">
-        <input type="text" name="emailaddress" id="email" class="email" placeholder="Enter Email" required><br>
-        <input type="text" name="website" id="username" class="username" placeholder="Enter Website" required><br>
-		<input type="password" name="password" id="password" class="password" placeholder="Enter Password" required><br>
+
+        <input type="text" name="website" id="website" class="website" placeholder="Enter Website" required><br>
         <button type="submit" class="mgr-submit">Submit</button>
 	</form>
 	<p class="output" id="output">{{output}}</p>
