--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,8 +13,8 @@
     <h1 class="Login-title">Login</h1>
     <form id="login-form" method="POST" action="/login-entry">
 
-        <input type="text" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email"> <br>
-        <input type="password" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password"> <br>
+        <input type="text" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email" required> <br>
+        <input type="password" id="userInputPassword" class="userPassword" name="password" placeholder="Enter a password" required> <br>
         <input type="submit" value="Submit" class="loginsubmit">
 
     </form>
