--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -13,9 +13,9 @@
     <h1 class="sign-up-title">sign-up</h1>
     <form id="sign-up-form" method="POST" action="/newUser">
         Email: <br>
-        <input type="email" id="userInputEmail" name="email" placeholder="Enter an email"> <br>
+        <input type="email" id="userInputEmail" name="email" placeholder="Enter an email" required> <br>
         Password: <br>
-        <input type="text" id="userInputPassword" name="password" placeholder="Enter a password"> <br>
+        <input type="text" id="userInputPassword" name="password" placeholder="Enter a password" required> <br>
         <input type="submit" value="Submit" class="submit">
     </form>
     <p class="err" id="err">{{error}}</p>
