--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -5,7 +5,7 @@
 <body style="background-color: #FFA07A;">
 
 <!-- control panel -->
-
+    {{> control}}
 
 <!--sign-up Page-->
 <div id="sign-up-div" >
