Added fields to add password

--- a/views/partials/mgr.hbs
+++ b/views/partials/mgr.hbs
@@ -4,7 +4,9 @@
 
 	<form id="mgr-form" method="POST" action="/addAccount">
 
+        <!--<input type="text" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>-->
         <input type="text" name="website" id="website" class="website" placeholder="Enter Website" required><br>
+        <input type="text" id="userInput" class="userInput" name="password" placeholder="Enter a Password"><br>
         <button type="submit" class="mgr-submit">Submit</button>
 	</form>
 	<p class="output" id="output">{{output}}</p>
