--- a/views/partials/breacher.hbs
+++ b/views/partials/breacher.hbs
@@ -1,5 +1,5 @@
 <div id="breach-div" >
-	<h1 class="breach-title">Has Your Password Been Breached?</h1>
+	<!--<h1 class="breach-title">Has Your Password Been Breached?</h1>-->
 	<p class="page-info">Enter a password in the text box below to see how many times the password has been breached.</p>
 
 	<form id="pass-form" method="POST" action="/breach">
