--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -14,7 +14,7 @@
         <p class="emailtext">Email:</p> <br>
         <input type="email" id="userInputEmail" class="userEmail" name="email" placeholder="Enter an email"> <br>
         <p class="passwordtext">Password:</p><br>
-        <input type="text" id="userInputPassword" class="password" name="password" placeholder="Enter a password"> <br>
+        <input type="password" id="userInputPassword" class="password" name="password" placeholder="Enter a password"> <br>
         <input type="submit" value="Submit" class="mgr-submit">
     </form>
     <p class="err" id="err">{{error}}</p>
