--- a/views/partials/delete.hbs
+++ b/views/partials/delete.hbs
@@ -2,7 +2,7 @@
     <!--<h1 class="manager-title">Manage Your Passwords Securely</h1>-->
     <!--<p class="manager-info">Store your username, password, and URL</p>-->
 
-    <form id="mgr-form" method="DELETE" action="/delWebsite">
+    <form id="mgr-form" method="POST" action="/delWebsite">
         <input type="text" name="website" id="username" class="website" placeholder="Enter Website" required><br>
         <!--<input type="text" name="password" id="username" class="username" placeholder="Enter Website" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
