--- a/views/partials/deleteall.hbs
+++ b/views/partials/deleteall.hbs
@@ -2,7 +2,7 @@
     <!--<h1 class="manager-title">Manage Your Passwords Securely</h1>-->
     <!--<p class="manager-info">Store your username, password, and URL</p>-->
 
-    <form id="mgr-form" method="DELETE" action="/delEmail">
+    <form id="mgr-form" method="POST" action="/delEmail">
         <!--<input type="email" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
         <button type="submit" class="mgr-submit">Submit</button>
