--- a/views/partials/deleteall.hbs
+++ b/views/partials/deleteall.hbs
@@ -5,7 +5,7 @@
     <form id="mgr-form" method="POST" action="/delEmail">
         <!--<input type="email" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
-        <button type="submit" class="mgr-submit">Submit</button>
+        <button type="submit" class="mgr-submit">Delete All</button>
     </form>
     <p class="output" id="output">{{output}}</p>
 
