--- a/views/partials/findall.hbs
+++ b/views/partials/findall.hbs
@@ -6,7 +6,7 @@
         <!--<input type="email" name="emailaddress" id="username" class="userEmail" placeholder="Enter Email" required><br>-->
         <!--<input type="password" name="password" id="password" class="password" placeholder="Enter Password" required><br>-->
         <!--<input type="text" name="url" id="url" class="url" placeholder="Enter URL"><br>-->
-        <button type="submit" class="mgr-submit">Submit</button>
+        <button type="submit" class="mgr-submit">Find All</button>
     </form>
     <p class="output" id="output">{{output}}</p>
 
